# khonliang-researcher-lib

./: CLAUDE.md  README.md  pyproject.toml
.github/instructions/: review.instructions.md
.reviewer/examples/code_review/: allowlist_sql_tables.md  missing_key_vs_explicit_false.md  prefix_idempotency.md  universal_audience_wildcard.md  unrounded_score_for_math.md
docs/: repo-hygiene-audit.md
khonliang_researcher/: __init__.py  agent.py  best_of_n.py  doc_reader.py  domain.py  engines.py  graph.py  idea_parser.py  librarian.py  relevance.py  synthesizer.py  vector_index.py  worker.py
specs/: researcher-lib-evolution.md
tests/: test_agent.py  test_best_of_n.py  test_doc_reader.py  test_domain.py  test_engines.py  test_graph.py  test_idea_parser.py  test_librarian.py  test_relevance.py  test_synthesizer.py  test_vector_index.py  test_worker.py
