[project]
name = "khonliang-researcher-lib"
version = "0.1.0"
description = "Document relevance scoring, entity graphs, and synthesis for khonliang"
requires-python = ">=3.11"
dependencies = [
    "ollama-khonliang @ git+https://github.com/tolldog/ollama-khonliang.git@main",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["khonliang_researcher*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
