[project]
name = "khonliang-researcher-lib"
version = "0.3.0"
description = "SDK for building domain-scoped research agents on the khonliang platform"
requires-python = ">=3.11"
dependencies = [
    "ollama-khonliang @ git+https://github.com/tolldog/ollama-khonliang.git@main",
    "khonliang-bus-lib",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    # VectorIndex uses sqlite-vec for fast KNN. The pip package bundles
    # prebuilt binaries per platform (Linux x86_64/arm64, macOS, Windows) —
    # no system install required. Code falls back to brute-force cosine if
    # the load ever fails, but this ensures the fast path is the default.
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["khonliang_researcher*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
